# CMakePilot

./: CMakeLists.txt  README.md
include/: modern_robotics.h
src/: modern_robotics.cpp
tests/: lib_test.cpp
